miniextendr-macros/tests/ui/derive_newtype_on_enum.stderr
error: this derive only works on single-field newtype structs
 --> tests/ui/derive_newtype_on_enum.rs:6:6
  |
6 | enum Color {
  |      ^^^^^
